# PyCIPSim

./: README.md  SRS.md  pyproject.toml
configs/: README.md  device1_target.json  device2_originator.json
debian/: changelog  control  copyright  rules
docs/: hmi_smoke_test.md
scripts/: setup_wsl.sh
src/pycipsim/: __init__.py  cip.py  cli.py  config_store.py  configuration.py  device.py  engine.py  handshake.py  logging_config.py  runtime.py  session.py  target.py  target_protocol.py
src/pycipsim/runtime/: __init__.py  assemblies.py  cip_io.py  enip_server.py  enip_target.py
src/pycipsim/web/: __init__.py  app.py
src/pycipsim/web/templates/: index.html
tests/: test_allowed_hosts.py  test_cip_metadata.py  test_cli.py  test_configuration_store.py  test_engine.py  test_enip_server.py  test_handshake.py  test_runtime.py  test_runtime_enip_server.py  test_scenario.py  test_session.py  test_target_runtime.py  test_web_app.py
tests/runtime/: conftest.py  test_enip_target_runtime.py
