[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycipsim"
version = "0.1.0"
description = "Simulation toolkit for CIP/Ethernet-IP scenarios"
readme = "README.md"
authors = [{ name = "PyCIPSim Contributors" }]
requires-python = ">=3.10"
keywords = ["cip", "ethernet-ip", "simulation", "plc"]
dependencies = [
    "click>=8.1",  # CLI ergonomics
    "rich>=13.7",  # optional CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
]
pycomm3 = [
    "pycomm3>=1.3",
]

[project.urls]
Homepage = "https://example.com/pycipsim"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

